# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  backend-tool-refactor.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  models.py  search_tools.py
backend/tests/: TEST_RESULTS_ANALYSIS.md  __init__.py  conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: README.md  check-all.bat  check-all.sh  format.bat  format.sh  lint.bat  lint.sh  typecheck.bat  typecheck.sh
